fix: 하드코딩 수정(#26)